Fix alignment

--- a/app/assets/stylesheets/application/styles.scss
+++ b/app/assets/stylesheets/application/styles.scss
@@ -16,6 +16,7 @@ header h1 a:visited {
 }
 
 header h1 span {
+  vertical-align: middle;
   padding-top:2px;
   font-family: "SSGizmo";
   font-style: normal;
